# IT-practice

Lab1/: CMakeLists.txt
Lab1/src/: func.h  task1.c  task2.c  task3.c  task4.c  task5_func.c  task5_main.c  task6_func.c  task6_main.c  task7_func.c  task7_main.c
Lab2/src/: main.c
Lab3/: CMakeLists.txt
Lab3/Lab4 — копия/: CMakeLists.txt
Lab3/Lab4 — копия/src/: task1.c
Lab3/src/: a.cpp  a.out  do_while_findFirstElement.cpp  do_while_findFirstNegativeElement.cpp  do_while_main.cpp  do_while_print.cpp  do_while_summ2.cpp  for_findFirstElement.cpp  for_findFirstNegativeElement.cpp  for_main.cpp  for_print.cpp  for_summ2.cpp  while_findFirstElement.cpp  while_findFirstNegativeElement.cpp  while_main.cpp  while_print.cpp  while_summ2.cpp
Lab5/src/: main.c
Lab6/src/: main.c
Lab7/src/: main.c
